2009-01-10  Roland McGrath  <roland@redhat.com>

	* dwarfcmp.cc (test_writer): New variable.
	(options, parse_opt): Grok -T/--test-writer to set it.
	(main): When set, exercise dwarf_output constructors and comparators.

	* dwarflint.c (options, parse_opt): Replace --gnu with
	-i/--ignore-missing, to match dwarfcmp.

2009-01-10  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Implement --no-debug: silently accept file, if its
	debug info is not available.

2009-01-10  Roland McGrath  <roland@redhat.com>

	* dwarfcmp.cc: New file.
	* Makefile.am (bin_PROGRAMS): Add dwarfcmp.
	(dwarfcmp_SOURCES): New variable.
	(dwarfcmp_no_Wformat, dwarfcmp_LDADD): New variables.

2009-01-10  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Implement fine-grained message selection.  Each
	message has a category, which is bitwise OR of category options.
	There are acceptance and rejection criteria for warnings and
	errors, which can be tuned using command-line options (currently
	--strict and --gnu).
	Use dwarfstrings.h in two messages.

2009-01-10  Petr Machata  <pmachata@redhat.com>

	* readelf.c: Extract functions that format dwarf enums into a file
	of its own, so it can be shared with dwarflint.
	* dwarfstrings.h: That file.

2009-01-09  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Sort the abbrev tables and look up abbreviations
	with bisect search.

2009-01-09  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Checking for zero padding and unreferenced bytes.
	CU size and padding at the end of CU are now checked.

2009-01-10  Ulrich Drepper  <drepper@redhat.com>

	* strings.c (read_block): Fix typo in error message string.

2009-01-07  Ulrich Drepper  <drepper@redhat.com>

	* ld.c (ld_new_searchdir): Fix adding to search path list.

2009-01-07  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Check that the sibling doesn't point to the
	terminating DIE (the one with the code of 0).

2009-01-07  Petr Machata  <pmachata@redhat.com>
